# Pasargad-railway

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  PasarGuard.code-workspace  README-fa.md  README-ru.md  README-zh-cn.md  README.md  config.py  healthcheck.sh  install_service.sh  main.py  pyproject.toml  railway.toml  start.sh  tui_wrapper.sh
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: api-codeql.yml  build.yml  frontend-codeql.yml  ruff-check.yml  test-database-migrations.yml
app/: app_factory.py
app/core/: hosts.py  manager.py  wireguard.py  xray.py
app/db/: models.py
app/jobs/: node_checker.py  record_usages.py  review_admins.py
app/models/: admin.py  admin_role.py  api_key.py  host.py  notification_enable.py  proxy.py  settings.py  subscription.py  user.py
app/nats/: node_rpc.py
app/node/: __init__.py  sync.py  user.py
app/notification/: __init__.py
app/operation/: __init__.py  admin.py  admin_sync.py  api_key.py  core.py  group.py  settings.py  subscription.py  user.py
app/routers/: __init__.py  api_key.py  authentication.py  node.py  subscription.py
app/subscription/: base.py  share.py
app/telegram/: __init__.py
app/utils/: crypto.py  jwt.py  wireguard.py
cli/: README.md
dashboard/: .gitignore  README.md  orval.config.ts  package.json  vite.config.mts
scripts/: export_openapi.py
tests/: test_api_key_crypto.py  test_app_factory.py  test_node_manager.py  test_node_sync.py  test_record_usages.py  test_subscription_clash_xhttp.py
tests/api/: conftest.py  helpers.py  sample_data.py  test_admin.py  test_admin_role.py  test_api_key.py  test_bulk.py  test_bulk_delete_entities.py  test_bulk_entity_actions.py  test_group.py  test_host.py  test_hwid.py  (+8 more)
(+334 files in other folders)
