[project]
name = "PasarGuard"
version = "5.1.0"
description = "Unified GUI Censorship Resistant Solution"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "apscheduler>=3.11.3",
    "Deprecated==1.2.13",
    "Jinja2>=3.1.6",
    "PyJWT>=2.10.1",
    "PyYAML>=6.0.2",
    "alembic>=1.18.5",
    "bcrypt==5.0.0",
    "click>=8.4.2",
    "commentjson==0.9.0",
    "cryptography==49.0.0",
    "fastapi>=0.139.0",
    "jdatetime>=6.0.0",
    "psutil>=7.2.2",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.2",
    "python-dateutil>=2.8.2",
    "python-multipart>=0.0.32",
    "qrcode>=8.1",
    "rich>=15.0.0",
    "uvicorn==0.51.0",
    "sse-starlette>=3.4.5",
    "aiohttp>=3.14.1",
    "packaging>=26.2",
    "sqlalchemy[asyncio]>=2.0.51",
    "aiosqlite>=0.21.0",
    "asyncpg>=0.31.0",
    "asyncmy>=0.2.10; sys_platform != 'win32'",
    "aiocache>=0.12.3",
    "aiogram>=3.29.1",
    "aiohttp-socks>=0.10.1",
    "uvloop>=0.22.1; sys_platform != 'win32'",
    "aiorwlock>=1.5.0",
    "typer>=0.26.8",
    "pasarguard-node-bridge>=0.8.1",
    "pip-system-certs>=5.3",
    "nats-py>=2.15.0",
]

[tool.ruff]
line-length = 120
indent-width = 4
respect-gitignore = true
exclude = ["app/db/migrations"]
fix = true

[tool.ruff.lint]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true

[tool.ruff.format]
quote-style = "double"
line-ending = "auto"
docstring-code-format = false
docstring-code-line-length = "dynamic"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "psycopg[binary]>=3.3.4",
    "pymysql>=1.2.0",
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
    "pytest-watch>=4.2.0",
    "ruff>=0.15.21",
    "sqlalchemy-utils>=0.41.2",
    "watchfiles>=1.2.0",
]
